--- a/app/views/questions.html
+++ b/app/views/questions.html
@@ -1,35 +1,41 @@
 <div class="question visible-question">
 	<h2>Monthly Revenue</h2>
-	<input>
-	<button>Next</button>
+	<button class="btn btn-success previous">Previous</button>
+	<input type="text">
+	<button class="btn btn-success next">Next</button>
 </div>
 
 <div class="question">
 	<h2>Monthly Sales</h2>
-	<input>
-	<button>Next</button>
+	<button class="btn btn-success previous">Previous</button>
+	<input type="text">
+	<button class="btn btn-success next">Next</button>
 </div>
 
 <div class="question">
 	<h2>Number of Reps Taking Calls</h2>
-	<input>
-	<button>Next</button>
+	<button class="btn btn-success previous">Previous</button>
+	<input type="text">
+	<button class="btn btn-success next">Next</button>
 </div>
 
 <div class="question">
 	<h2>Monthly Opportunities</h2>
-	<input>
-	<button>Next</button>
+	<button class="btn btn-success previous">Previous</button>
+	<input type="text">
+	<button class="btn btn-success next">Next</button>
 </div>
 
 <div class="question">
 	<h2>Monthly Contacts</h2>
-	<input>
-	<button>Next</button>
+	<button class="btn btn-success previous">Previous</button>
+	<input type="text">
+	<button class="btn btn-success next">Next</button>
 </div>
 
 <div class="question">
 	<h2>Daily Dials per Rep</h2>
-	<input>
-	<button>Next</button>
+	<button class="btn btn-success previous">Previous</button>
+	<input type="text">
+	<button class="btn btn-success next">Next</button>
 </div>
