Adds questions fade in functionality

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -39,6 +39,11 @@ body {
   display: block;
 }
 
+.visible-question-2 {
+  opacity: 0;
+  display: block;
+}
+
 /* Customize container */
 @media (min-width: 768px) {
   .container {
