--- a/app/views/questions.html
+++ b/app/views/questions.html
@@ -1,7 +1,7 @@
 <form name="questionsForm">
 	<div class="question visible-question">
 		<h2>Monthly Revenue</h2>
-		<input type="text"
+		<input type="number"
 			   name="revenue"
 			   ng-model="user.revenue"
 			   minlength="1"
@@ -13,7 +13,7 @@
 	<div class="question">
 		<h2>Monthly Sales</h2>
 		<!-- <button class="btn btn-success previous">Previous</button> -->
-		<input type="text"
+		<input type="number"
 			   name="sales" 
 			   ng-model="user.sales"
 			   minlength="1"
@@ -25,7 +25,7 @@
 	<div class="question">
 		<h2>Number of Reps Taking Calls</h2>
 		<!-- <button class="btn btn-success previous">Previous</button> -->
-		<input type="text"
+		<input type="number"
 			   name="reps" 
 			   ng-model="user.reps"
 			   minlength="1"
@@ -37,7 +37,7 @@
 	<div class="question">
 		<h2>Monthly Opportunities</h2>
 		<!-- <button class="btn btn-success previous">Previous</button> -->
-		<input type="text"
+		<input type="number"
 			   name="opportunities" 
 			   ng-model="user.opportunities"
 			   minlength="1"
@@ -49,7 +49,7 @@
 	<div class="question">
 		<h2>Monthly Contacts</h2>
 		<!-- <button class="btn btn-success previous">Previous</button> -->
-		<input type="text"
+		<input type="number"
 			   name="contacts" 
 			   ng-model="user.contacts"
 			   minlength="1"
@@ -61,7 +61,7 @@
 	<div class="question">
 		<h2>Daily Dials per Rep</h2>
 		<!-- <button class="btn btn-success previous">Previous</button> -->
-		<input type="text"
+		<input type="number"
 			   name="dials" 
 			   ng-model="user.dials"
 			   minlength="1"
